test-mtls.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: default
spec:
  mtls:
    mode: STRICT

kubectl apply -f <(/bin/istioctl kube-inject -f samples/sleep/sleep.yaml) -n testauth
