flagger.yaml
# flagger-install-on-kubernetes: https://docs.flagger.app/install/flagger-install-on-kubernetes
helm repo add flagger https://flagger.app

kubectl apply -f https://raw.githubusercontent.com/fluxcd/flagger/main/artifacts/flagger/crd.yaml

helm upgrade -i flagger flagger/flagger \
--namespace=istio-system \
--set crd.create=false \
--set meshProvider=istio \
--set metricsServer=http://prometheus.istio-system:9090

# https://api.slack.com/
helm upgrade -i flagger flagger/flagger \
--namespace=istio-system \
--set crd.create=false \
--set slack.url=https://hooks.slack.com/services/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 \
--set slack-channel="李玲丽" \
--set slack.user="李玲丽"

helm upgrade -i flagger-grafana flagger/grafana \
--namespace=istio-system \
--set url=http://prometheus.istio-system:9090 \
--set user=admin \
--set password=admin

kubectl apply -f - <<EOF
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: public-gateway
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway
  servers:
  - hosts:
    - '*'
    port:
      name: http
      number: 80
      protocol: HTTP
EOF

# install flagger-loadtester tool
kubectl create ns test
kubectl label namespace test istio-injection=enabled
helm upgrade -i flagger-loadtester flagger/loadtester -n test
