egress-rule-https.yaml
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: https
spec:
  hosts:
  - www.baidu.com
  ports:
  - number: 443
    name: tls
    protocol: TLS
  resolution: DNS

---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: istio-egressgateway-https
spec:
  selector:
    istio: egressgateway
  servers:
  - port:
      number: 443
      name: tls
      protocol: TLS
    hosts:
    - www.baidu.com
    tls:
      mode: PASSTHROUGH

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: vs-for-egressgateway-https
spec:
  hosts:
  - www.baidu.com
  gateways:
  - istio-egressgateway-https
  - mesh
  tls:
  - match:
    - gateways:
      - mesh
      port: 443
      sniHosts:
      - www.baidu.com
    route:
    - destination:
        host: istio-egressgateway.istio-system.svc.cluster.local
        subset: baidu
        port:
          number: 443
  - match:
    - gateways:
      - istio-egressgateway-https
      port: 443
      sniHosts:
      - www.baidu.com
    route:
    - destination:
        host: www.baidu.com
        port:
          number: 443
      weight: 100

---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: dr-for-egressgateway-https
spec:
  host: istio-egressgateway.istio-system.svc.cluster.local
  subsets:
  - name: baidu
